--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/register.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/register.css
@@ -1,6 +1,6 @@
 .container-register {
 	width: 40.1vmax;
-	height: 1600px;
+	height: 124vmin;
 	margin: 2vmin auto 0 auto;
 	background-color: #0A1931;
 	padding: 6vmin;
@@ -18,7 +18,7 @@
 	margin: 0 0 3.5vmin 0;
 }
 .form-register{
-	height: 100%;
+	height: 80vmin;
 	font-size: 2.6vmin;
 }
 .form-register__label {
