Chore: Se sube la ultima version del proyecto

--- a/03-Desarrollo/Proyecto formativo django/SaleCold/Products/templates/products/busqueda producto.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/Products/templates/products/busqueda producto.html
@@ -9,7 +9,11 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'snippets/header.html' %}
+    <header>
+        {% include 'snippets/main_nav.html' %}
+    </header>
+
+    {% include 'snippets/mensajes.html' %}
 
     <main class="container-search-product">
         <h2 class="container-search-product__title">Busqueda de productos</h2>
