--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/footer.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/footer.html
@@ -1,25 +1,18 @@
-{% load static %}
-
 <footer class="main-footer">
-    <address class="info-contact">
-        <p class="info-contact__paragraph">
-            <i class="fas fa-map-marked-alt" aria-hidden="true"></i>
-            Calle 45C # 4-10C-75, Barranquilla
-        </p>
-        <p class="info-contact__paragraph">
-            <i class="fas fa-phone-square-alt" aria-hidden="true"></i>
-            333333
-        </p>
-        <p class="info-contact__paragraph">
-            <i class="fas fa-envelope" aria-hidden="true"></i>
-            salecold.noreply@gmail.com
-        </p>
-    </address>
+    <p class="container-paragraph-main-footer">
+        <i class="fas fa-map-marked-alt" aria-hidden="true"></i>
+        Calle 45C # 4-10C-75, Barranquilla
+    </p>
+    <p class="container-paragraph-main-footer">
+        <i class="fas fa-phone-square-alt" aria-hidden="true"></i>
+        333333
+    </p>
+    <p class="container-paragraph-main-footer">
+        <i class="fas fa-envelope" aria-hidden="true"></i>
+        salecold.noreply@gmail.com
+    </p>
 
     <p class="main-footer__paragraph">
-        &copy; SaleCold {% now "Y" %} | Todos los derechos reservados
+        &copy; SaleCold 2021-{% now "Y" %}
     </p>
 </footer>
-
-<script src="{% static 'js/index.js' %}" defer></script>
-<script src="{% static 'js/menu_user.js' %}" defer></script>
