--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/contacto.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/contacto.css
@@ -1,167 +1,56 @@
 body {
-    padding-top: 5.5em;
-}
-.section-contact {
-    width: 100vw;
-    height: 935px;
-    background-color: var(--color-formularios);
-    box-shadow: 23px 23px 45px #000;
-    color: #fff;
-}
-.container-form-contact {
-    height: 61%;
-    padding: 1.4em;
-    border: none;
-}
-.container-form-contact__title {
-    font-size: 1.3rem;
-    margin-top: 0;
-    margin-bottom: 1em;
-}
-.form-contact__input {
-    width: 100%;
-    height: 44px;
-    margin-bottom: 1.3em;
-    padding-left: 1em;
-    color: #fff;
-    background-color: #1a222c;
-    border: none;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
-    font-size: 0.9rem;
-    outline: none;
-}
-.form-contact__textarea {
-    width: 100%;
-    height: 105px;
-    color: #fff;
-    background-color: #1a222c;
-    outline: none;
-    border: none;
-    resize: none;
-    padding: 1em;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
-}
-.form-contact__btn {
-    width: 100%;
-    height: 38px;
-    font-size: 0.9rem;
-    color: #fff;
-    background-color: rgb(0, 81, 255);
-    border: none;
-    margin-top: 1.4em;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
-    font-weight: 400;
-    cursor: pointer;
-}
-.container-figure-contact {
-    width: 100%;
-    height: 39%;
-    margin: 0;
-}
-.container-figure-contact__img {
-    width: 100%;
-    height: 39%;
+    padding-top: 65px;
 }
 
-@media screen and (min-width: 360px) {
-    .container-form-contact {
-        padding: 1.6em;
-    }
+.main-contact {
+    padding: 1em;
+    font-size: .9rem;
 }
-@media screen and (min-width: 400px) {
-    .section-contact {
-        height: 845px;
-    }
-    .container-form-contact {
-        padding: 1.7em;
-    }
+
+.container-form-contact__title {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 1.2rem;
 }
-@media screen and (min-width: 500px) {
-    .section-contact {
-        width: 80vw;
-        margin-left: auto;
-        margin-right: auto;
-    }
+
+.form-contact__input, .form-contact__textarea {
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: .5em;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -ms-border-radius: .5em;
+    -o-border-radius: .5em;
+    background-color: var(--bgcolor-input-form);
+    margin-top: 1.3em;
+    padding-left: .7em;
 }
-@media screen and (min-width: 700px) {
-    .section-contact {
-        width: 74vw;
-        height: 870px;
-    }
-    .form-contact__input,
-    .form-contact__textarea,
-    .form-contact__btn {
-        font-size: 1rem;
-    }
-    .form-contact__btn {
-        height: 45px;
-    }
+
+.form-contact__input {
+    height: 40px;
 }
-@media screen and (min-width: 900px) {
-    .section-contact {
-        width: 65vw;
-    }
+
+.form-contact__textarea {
+    padding: .7em;
+    resize: none;
+    height: 130px;
 }
-@media screen and (min-width: 1200px) {
-    body {
-        height: 98.8vh;
-    }
-    .section-contact {
-        display: flex;
-        width: 67vw;
-        height: auto;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .container-form-contact {
-        width: 48%;
-        padding: 1.9em;
-    }
-    .container-figure-contact {
-        width: 52%;
-        height: 100%;
-    }
-    .container-figure-contact__img {
-        height: 100%;
-    }
-    .main-footer {
-        margin: 0;
-    }
-    .errorlist {
-        font-size: 0.9rem;
-    }
-}
-@media screen and (min-width: 1400px) {
-    .section-contact {
-        width: 60vw;
-        height: auto;
-    }
-    .container-figure-contact__img {
-        height: 100%;
-    }
-}
-@media screen and (min-width: 1600px) {
-    body {
-        height: 98.8vh;
-    }
-    .section-contact {
-        width: 56vw;
-        margin-bottom: 4em;
-    }
-    .exito,
-    .error {
-        width: 56vw;
-    }
+
+.form-contact__btn {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    background: linear-gradient(to right, blue, rgb(11, 210, 236));
+    color: white;
+    border: none;
+    border-radius: .5em;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -ms-border-radius: .5em;
+    -o-border-radius: .5em;
+    font-size: .9rem;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    cursor: pointer;
 }
