--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
@@ -1,29 +1,248 @@
-@media screen and (min-width: 1200px) {
-    .main-header {
-        max-width: 100%;
-        height: 670px;
+@media screen and (min-width: 1000px) {
+    .main-header__form {
+        width: 30%;
     }
-    .container-info-header__title {
+    .container-search-form__input, .container-search-form {
+        width: 100%;
+    }
+    .container-login {
+        width: 40%;
+    }
+    .main-login {
+        height: 70vh;
+    }
+    .container-form-register, .container-form-contact {
+        width: 35%;
+    }
+    .container-form-contact__title {
+        font-size: 1.6rem;
+    }
+    .main-reset-password__title, .main-form-reset-password__title, .main-confirm-reset-password__title {
+        font-size: 1.4rem;
+    }
+    .main-reset-password {
+        font-size: 1rem;
+        padding: 1.4em;
+    }
+    .form-reset-password > input, .form-reset-password__btn, .form-reset-new-password > input, .form-reset-new-password__btn, .main-confirm-reset-password__btn, .container-label-form__input, .container-select-update-user, .container-form-uptade-user__btn, .container-form-uptade-user__btn, .container-label-form-contraseña__input, .form-contraseña__btn {
+        display: block;
+        height: 44px;
+        font-size: 1rem;
+    }
+    .main-confirm-reset-password__btn {
+        line-height: 44px;
+    }
+    .form-reset-password  {
+        margin-top: 1.5em;
+    }
+    .main-reset-password-send, .main-form-reset-password, .main-confirm-reset-password {
+        font-size: 1rem;
+    }
+    .main-confirm-reset-password {
+        padding: 1.4em;
+    }
+    .form-contact__textarea {
+        padding: 1em;
+    }
+    .main-cart-shopping {
+        width: auto;
+        display: grid;
+        grid-template-rows: 30px 1fr;
+        grid-template-columns: 550px 300px;
+        padding: 1.4em 2em;
+        row-gap: 1.6em;
+        -moz-column-gap: 2.2em;
+             column-gap: 2.2em;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .main-cart-shopping__title {
+        margin: 0;
+        height: 30px;
+        font-size: 1.4rem;
+    }
+
+    .section-products-cart-shopping {
+        grid-row: 2;
+        grid-column: 1;
+    }
+    .main-cart-shopping {
+        grid-column: span 2;
+    }
+    .container-total-price-cart {
+        width: 330px;
+        grid-row: 2;
+        grid-column: 2;
+        height: 340px;
+        padding: 1.2em;
+    }
+    .container-main-dashboard-user {
+        padding: 1.7em;
+        margin-left: 300px;
+        margin-top: 0;
+        padding-top: 63px;
+    }    
+    .container-menu-dashboard-user{
+        transform: translateX(0);
+        -webkit-transform: translateX(0);
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+    }
+    .container-toggle-menu-dashboard-user {
+        display: none;
+    }
+    .container-header-main-dashboard-user {
+        width: calc(100% - 300px);
+        padding-right: 1.5em;
+        font-size: 1rem;
+        left: 300px;
+    }
+    .container-figure-menu-dashboard-user {
+        margin-top: 1.5em;
+        margin-bottom: 1.5em;
+    }
+    .container-link-element-list-options-menu-dashboard-user {
+        font-size: 1rem;
+    }
+    
+    .container-link-element-list-options-menu-dashboard-user--icon {
+        font-size: 1.1rem;
+    }
+    .container-element-list-options-menu-dashboard-user {
+        height: 48px;
+    }
+    .container-label-form__input, .container-select-update-user, .container-form-uptade-user__btn, .container-label-form-contraseña__input, .form-contraseña__btn {
+        width: 400px;
+    }
+    .container-form-uptade-user {
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 1rem;
+        margin-left: 1.2em;
+        -moz-column-gap: 1.6em;
+             column-gap: 1.6em;
+        margin-top: 1.5em;
+    }
+    .form-contraseña {
+        margin-left: 1.2em;
+        margin-top: 1.5em;
+        font-size: 1rem;
+    }
+    .container-main-dashboard-user__title {
+        margin-left: .9em;
+        font-size: 1.3rem;
+        margin-top: 1.2em;
+    }
+    .main-info {
+        display: flex;
+        -moz-column-gap: 1.2em;
+             column-gap: 1.2em;
+        padding: 1.6em;
+    }
+    .container-category {
+        display: grid;
+        grid-template-columns: 400px 1fr;
+        grid-template-rows: 20px 40px 1px auto 40px;
+        margin-bottom: 3em;
+        row-gap: 1.3em;
+        min-height: 90vh;
+    }
+    .container-products-category {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        gap: 1.7em;
+        grid-row: 3;
+        grid-column: 2;
+    }
+    .container-template-product {
+        margin: 0;
+    }
+    .container-result-search-product {
+        grid-row: 3;
+    }
+    .container-filter {
+        width: 300px;
+        height: 220px;
+        grid-row: 4;
+        background-color: white;
+        padding: 1.2em;
+        margin: 0;
+    }
+    .container-filter__title {
+        margin-top: 0;
+        grid-column: span 2;
+    }
+    .container-pagination-products {
+        grid-row: 5;
+        grid-column: 2;
+    }
+    .section-productos-ofertados__title {
+        text-align: end;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .main-menu {
+        font-size: 1.2rem;
+    }
+    .container-login-main-menu {
+        padding-right: 1.3em;
+        gap: 1em;
+    }
+    .container-link-logo-main-menu__img {
+        width: 68px;
+    }
+    .container-logo-main-menu {
+        gap: 1.6em;
+        padding-left: 1.2em;
+    }
+    .container-categories-main-menu__icon {
+        font-size: 2rem;
+    }
+    .container-list-categories-main-menu {
+        width: 310px;
+    }
+    .container-user-main-menu__icon {
+        font-size: 1.4rem;
+    }
+    .main-footer {
+        font-size: 1.2rem;
+    }
+    .container-main-aside {
+        bottom: 172px;
+        right: 1em;
+    }
+    .container-link-main-aside__icon {
+        font-size: 1.9rem;
+    }
+    .container-figure-main-header {
+        height: 630px;
+    }
+    .container-info-main-header__title {
         font-size: 3.3rem;
     }
-    .container-figure-header {
-        max-width: 100%;
+    .main-header__form {
+        width: 29%;
     }
-    .container-info-header__btn {
-        padding: 0.9em;
-        font-size: 1.1rem;
+    .container-search-form__input, .container-search-form {
+        width: 100%;
     }
-    .container-search-form__input {
-        font-size: 1.1rem;
+    .container-info-main-header__btn {
+        width: 125px;
+        height: 47px;
+        line-height: 47px;
     }
-    .main-icon {
-        width: 10vw;
+    .container-link-main-menu__quantity-products {
+        left: 2.1em;
+        font-size: 1rem;
     }
-    .container-figure-header__img {
-        height: 100%;
+    .container-section-category__title {
+        font-size: 1.6rem;
     }
-    .container-products {
-        margin-bottom: 2.5em;
+    .container-search-form__btn {
+        font-size: 1.3rem;
     }
     .container-pagination-products {
         margin-bottom: 2em;
@@ -33,5 +252,87 @@
     }
     .container-element-list-pagination-products--width {
         width: 82px;
+    }
+    .container-login {
+        width: 35%;
+        font-size: 1rem;
+    }
+    .form-login__input, .form-login__btn, .form-contact__input, .form-register__input, .form-register__btn, .form-contact__btn {
+        height: 44px;
+    }
+    .form-login__input, .form-contact__input, .form-register__input, .form-reset-password > input {
+        padding-left: 1em;
+    }
+    .container-login__title {
+        font-size: 1.4rem;
+    }
+    .container-register__title {
+        margin-top: 0;
+    }
+    .container-form-contact__title,  .container-total-price-cart__title {
+        font-size: 1.4rem;
+    }
+    .form-register__btn, .form-contact__btn, .form-login__btn  {
+        font-size: 1rem;
+    }
+    .errorlist {
+        padding-left: .5em;
+        margin-top: .8em;
+    }
+    .container-register {
+        font-size: .9rem;
+    }
+    .main-cart-shopping {
+        grid-template-columns: 500px 300px;
+    }
+
+}
+
+@media screen and (min-width: 1400px) {
+    .container-login {
+        width: 28%;
+    }
+    .container-form-register, .container-form-contact {
+        width: 28%;
+    }
+    .container-form-contact__title {
+        margin-top: .6em;
+    }
+    .container-form-uptade-user {
+        -moz-column-gap: 3em;
+             column-gap: 3em;
+    }
+    .container-picture-info__img {
+        width: 550px;
+    }
+    .info-proyect {
+        font-size: 1rem;
+    }
+    .container-products {
+        padding-left: 1em;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .container-form-uptade-user {
+        width: 900px;
+    }
+}
+
+@media screen and (min-width: 1900px) {
+    .container-info-main-header {
+        height: 320px;
+    }
+    .main-header__form {
+        width: 440px;
+    }
+    .container-figure-main-header {
+        height: 650px;
+    }
+    .form-login, .container-login, .container-form-register, .container-form-contact {
+        width: 450px;
+    }
+    .form-contact, .form-register {
+        margin-top: .3em;
     }
 }
