--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
@@ -1,12 +1,88 @@
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
+    .main-menu {
+        font-size: 1.1rem;
+    }
     .main-footer {
-        font-size: 1.2rem;
-        padding: 0.7em;
+        padding: 1em .3em;
+        font-size: 1.1rem;
     }
-    .main-footer__paragraph {
-        margin: 0.7em 0 0 0;
+    .container-figure-main-header {
+        height: 430px;
     }
-    .info-contact__paragraph {
-        margin: 0 0 0.3em 0;
+    .container-info-main-header__title {
+        font-size: 2.4rem;
+    }
+    .container-search-form__input {
+        height: 40px;
+    }
+    .main-header__form {
+        width: 50%;
+    }
+    .container-search-form__input, .container-search-form {
+        width: 100%;
+    }
+    .container-info-main-header__btn {
+        font-size: 1rem;
+        width: 125px;
+        height: 45px;
+        line-height: 45px;
+    }
+
+    .container-element-list-categories-main-menu, .container-element-option-user-main-menu {
+        font-size: 1rem;
+    }
+
+    .container-link-main-menu__quantity-products {
+        left: 1.9em;
+    }
+    .container-section-category__title {
+        font-size: 1.4rem;
+    }
+    .container-login {
+        width: 65%;
+    }
+    .container-form-register, .container-form-contact {
+        width: 55%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .form-reset-password > input, .form-reset-password__btn, .form-reset-new-password > input, .form-reset-new-password__btn, .main-confirm-reset-password__btn {
+        display: block;
+        max-width: 310px;
+    }
+
+    .container-form-delete-product {
+        left: 93%;
+    }
+
+    .main-cart-shopping {
+        width: 70%;
+        margin-right: auto;
+        margin-left: auto;
+    }
+    .container-element-products-cart-shopping {
+        font-size: .9rem;
+        padding: 1.1em;
+        grid-template-columns: 100px repeat(3, 1fr);
+        gap: .8em;
+    }
+    .container-picture-info__img {
+        width: 400px;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .container-login {
+        width: 45%;
+    }
+    .container-form-register, .container-form-contact {
+        width: 45%;
+    }
+    .main-cart-shopping {
+        width: 60%;
+    }
+
+    .container-form-delete-product {
+        left: 94%;
     }
 }
