--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/register.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/register.css
@@ -1,129 +1,50 @@
 body {
-    padding-top: 6em;
+    padding-top: 65px;
 }
-.container-register {
-    max-width: 100vw;
-    background-color: var(--color-formularios);
-    color: #fff;
-    border: none;
-    margin-bottom: 2em;
-    padding: 1.6em;
+
+.main-register {
+    padding: 1em;
+    font-size: .9rem;
 }
-.container-register__title {
-    font-size: 1.3rem;
-    margin-top: 0;
-    margin-bottom: 1.4em;
+
+.container-form-register__title {
+    margin-bottom: 0;
+    margin-top: .3em;
 }
-.form-register__input,
-.container-select-register {
-    display: block;
+
+.form-register__input, .container-select-register {
     width: 100%;
-    height: 44px;
-    background-color: #1a222c;
-    color: #fff;
+    height: 40px;
+    background-color: var(--bgcolor-input-form);
+    padding-left: .7em;
     border: none;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
-    margin-bottom: 1.5em;
-    padding-left: 1em;
-    font-size: 0.9rem;
     outline: none;
+    border-radius: .5em;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -ms-border-radius: .5em;
+    -o-border-radius: .5em;
+    margin-top: 1.3em;
 }
+
 .container-select-register {
-    font-weight: 1;
-    color: rgba(255, 255, 255, 0.705);
-    padding-right: 1em;
-    font-size: 0.8rem;
+    color: rgb(54, 54, 54);
 }
+
 .form-register__btn {
     width: 100%;
-    height: 38px;
-    border-radius: 1em;
-    -webkit-border-radius: 1em;
-    -moz-border-radius: 1em;
-    -ms-border-radius: 1em;
-    -o-border-radius: 1em;
+    height: 40px;
+    text-align: center;
+    background: linear-gradient(to right, blue, rgb(11, 210, 236));
+    color: white;
     border: none;
-    color: #fff;
-    background-color: rgb(0, 81, 255);
-    font-size: 0.9rem;
-    font-weight: 400;
-    margin-top: 0.4em;
-}
-.container-conditions-register {
-    font-size: 0.6rem;
-}
-.container-conditions-register__link {
-    color: #fff;
-}
-.container-conditions-register__input {
-    margin-right: 0.5em;
-}
-.errorlist {
-    margin-top: 0;
+    border-radius: .5em;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -ms-border-radius: .5em;
+    -o-border-radius: .5em;
+    font-size: .9rem;
+    margin-top: 1.5em;
     margin-bottom: 1em;
-    list-style: none;
-    font-size: 0.8rem;
-    color: red;
-    padding: 0 0 0 .4em;
-}
-@media screen and (min-width: 320px) {
-    .container-conditions-register {
-        font-size: 0.7rem;
-    }
-}
-@media screen and (min-width: 768px) {
-    .error {
-        width: 60vw;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .container-register {
-        width: 60vw;
-        padding: 2.4em;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-@media screen and (min-width: 1000px) {
-    .error {
-        width: 54vw;
-    }
-    .container-register {
-        width: 54vw;
-        padding: 2.7em;
-    }
-    .container-register__title {
-        font-size: 1.7rem;
-    }
-    .form-register__input,
-    .container-select-register {
-        height: 52px;
-        margin-bottom: 1.7em;
-        padding-left: 1.2em;
-        font-size: 1rem;
-    }
-    .container-conditions-register {
-        font-size: 0.9rem;
-        padding-left: 0.3em;
-    }
-    .form-register__btn {
-        height: 48px;
-        font-size: 1rem;
-        cursor: pointer;
-    }
-    .errorlist {
-        font-size: 0.9rem;
-    }
-}
-@media screen and (min-width: 1200px) {
-    .error {
-        width: 40vw;
-    }
-    .container-register {
-        width: 40vw;
-    }
+    cursor: pointer;
 }
