--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaContacto.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/mails/plantillaContacto.html
@@ -58,7 +58,7 @@
 {% block content %}
     <section class="container-email">
         <article class="container-email-header">
-            <a href="{{dominio}}{{url}}" target="_blank" class="container-image-email-header" rel="noopener">    
+            <a href="{% if request.is_secure %}https{% else %}http{% endif %}://{{dominio}}{{url}}" target="_blank" class="container-image-email-header" rel="noopener">    
                 <img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1645626671/Logo/Logo4_ez3iqd.png" alt="Logo SaleCold" class="container-image-email-header__img" loading="lazy">
             </a>
         </article>
