--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/aside.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/aside.html
@@ -1,8 +1,8 @@
-<aside class="main-icon">
-    <a href="{% url 'info' %}" class="container-icon container-icon--position">
-        <i class="fas fa-info-circle container-icon__item" aria-hidden="true"></i>
+<aside class="container-main-aside">
+    <a href="{% url 'info' %}" class="container-link-main-aside">
+        <i class="fas fa-info-circle container-link-main-aside__icon" aria-hidden="true"></i>
     </a>
-    <a href="{% url 'Users:contact' %}" class=" container-icon">
-        <i class="fas fa-comment-dots container-icon__item" aria-hidden="true"></i>
+    <a href="{% url 'Users:contact' %}" class="container-link-main-aside">
+        <i class="fas fa-comment-dots container-link-main-aside__icon" aria-hidden="true"></i>
     </a>
 </aside>
