--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/mensajes.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/mensajes.html
@@ -1,15 +1,16 @@
 {% if messages %}
     {% for mensaje in messages %}
-        {% if mensaje.tags == 'success' %}
-            <div class = "exito">
-                <i class="fas fa-check-square" aria-hidden="true"></i> 
-                {{mensaje}}
-            </div>
-        {% else %}
-            <div class="error">
-                <i class="fas fa-exclamation-triangle" aria-hidden="true"></i> 
-                {{mensaje}}
-            </div>
-        {% endif %}
+        <section class="container-modal" id="containerModal">
+            <article class="modal">
+                {% if mensaje.tags == 'success' or mensaje.tags == 'error' %}
+                    <img src="{% if mensaje.tags == 'success' %} https://res.cloudinary.com/dpxek6oka/image/upload/v1646608238/images/checked_mhmicv.webp {% elif mensaje.tags == 'error' %}
+                    https://res.cloudinary.com/dpxek6oka/image/upload/v1646608242/images/cancel_bqxgzw.webp {% endif %}" class="modal__img" loading="lazy" aria-hidden="true" alt="Imagen modal" decoding="async">
+                {% endif %}
+
+                <i class="fa-solid fa-xmark modal__icon" aria-hidden="true" onclick="cerrarModal()"></i>
+                <p class="modal__paragraph">{{mensaje}}</p>
+                <button class="modal__btn {% if mensaje.tags == 'error' %}modal__btn--error{% endif %}" onclick="cerrarModal()">Aceptar</button>
+            </article>
+        </section>
     {% endfor %}
 {% endif %}
