--- a/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/main_nav.html
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/templates/snippets/main_nav.html
@@ -20,6 +20,8 @@
 								<img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1645663906/images/condensador_rnvvi0.webp" alt="Icono {{categoria.name}}" aria-hidden="true" class="container-link-element-categories-main-menu__icon" decoding="async" loading="lazy">
 							{% elif categoria.name == 'Aire acondicionado' %}
 								<img src="https://res.cloudinary.com/dpxek6oka/image/upload/v1645663906/images/aire-acondicionado_md11uu_btrcqe.webp" alt="Icono {{categoria.name}}" aria-hidden="true" class="container-link-element-categories-main-menu__icon" decoding="async" loading="lazy">
+							{% elif categoria.name == 'Gases refrigerantes' %}
+								<i class="fa-solid fa-bottle-water container-link-element-categories-main-menu__icon" aria-hidden="true"></i>
 							{% endif %}
 							{{categoria}}
 							<i class="fa-solid fa-angle-right container-link-element-categories-main-menu__arrow" aria-hidden="true"></i>
