--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/desktop.css
@@ -140,43 +140,24 @@
              column-gap: 1.2em;
         padding: 1.6em;
     }
-    .container-category {
-        display: grid;
-        grid-template-columns: 400px 1fr;
-        grid-template-rows: 20px 40px 1px auto 40px;
-        margin-bottom: 3em;
-        row-gap: 1.3em;
-        min-height: 90vh;
+    .container-order-and-products-category {
+        display: flex;
+        gap: 3.5em;
+        margin-top: 2.5em;
+        align-items: flex-start;
     }
     .container-products-category {
         display: flex;
         flex-wrap: wrap;
-        justify-content: flex-start;
-        gap: 1.7em;
-        grid-row: 3;
-        grid-column: 2;
-    }
-    .container-template-product {
+        gap: 2.3em;
         margin: 0;
     }
-    .container-result-search-product {
-        grid-row: 3;
-    }
-    .container-filter {
-        width: 300px;
-        height: 220px;
-        grid-row: 4;
-        background-color: white;
-        padding: 1.2em;
-        margin: 0;
-    }
-    .container-filter__title {
-        margin-top: 0;
-        grid-column: span 2;
+    .container-category__title {
+        font-size: 1.4rem;
     }
     .container-pagination-products {
-        grid-row: 5;
-        grid-column: 2;
+        margin-top: 2.5em;
+        margin-left: calc(280px + 3.5em);
     }
     .section-productos-ofertados__title {
         text-align: end;
