--- a/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
+++ b/03-Desarrollo/Proyecto formativo django/SaleCold/static/css/media_queries/tablet.css
@@ -69,6 +69,32 @@
     .container-picture-info__img {
         width: 400px;
     }
+    .container-order-and-products-category {
+        display: flex;
+        gap: 3.5em;
+        margin-top: 2.5em;
+        align-items: flex-start;
+    }
+    .container-products-category {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2.3em;
+        margin: 0;
+    }
+    .container-category__title {
+        font-size: 1.4rem;
+    }
+    .container-pagination-products {
+        margin-top: 2.5em;
+        margin-left: calc(280px + 3.5em);
+    }
+    .container-filter {
+        width: 280px;
+        padding: 1.2em;
+        flex-shrink: 0;
+        background-color: white;
+        margin: 0;
+    }
 }
 
 @media screen and (min-width: 800px) {
